--- a/ParseKinogo/ParseKinogo.csproj
+++ b/ParseKinogo/ParseKinogo.csproj
@@ -58,7 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor.cs" />
+    <Compile Include="Actors.cs" />
+    <Compile Include="Database.cs" />
+    <Compile Include="Film.cs" />
     <Compile Include="Films.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProxyServer.cs" />
